# eznet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example_messages.def
include/eznet/: Buffer.hpp  ConnectHandler.hpp  Connection.hpp  DiscoveryClient.hpp  DiscoveryServer.hpp  MessageAdapters.hpp  MessageHandler.hpp  MessageHandlerBase.hpp  Utils.hpp
message_generator/: DefinitionParser.cpp  DefinitionParser.hpp  MessageGenerator.cpp  MessageGenerator.hpp
message_generator_src/: Definition.hpp  MessageGenerator.cpp  main.cpp
src/: Connection.cpp  Constants.hpp  DiscoveryClient.cpp  DiscoveryServer.cpp  MessageHandlerBase.cpp  Utils.cpp
